CHANGES IN FLTK 1.1.2

	- Fl_Button, Fl_Choice, and Fl_Menu_Button incorrectly
	  activated the button/menu when the spacebar was
	  pressed in conjunction with shift, control, alt, or
	  meta.
	- FLTK should now compile with Xft 2.0.
	- Some versions of Tru64 4.0 have snprintf and
	  vnsprintf, but don't have the prototypes for those
	  functions.
	- FLTK had trouble doing character composition with some
	  keyboard layouts under X11 (in particular, Belgian).
	- Fl_Text_Editor would cause a segfault if the user
	  pressed CTRL-V (paste) without having any data in the
	  clipboard...
	- The tab key moved backwards in menus instead of
	  forwards.  Shift-tab still moves backwards.
	- The redraw_label() method didn't damage the parent
	  window when the label was outside the widget's
	  bounding box.
	- Added a "draw_children()" method to Fl_Group to make
	  subclassing Fl_Group with a custom draw() function
	  easier.
	- Fl_Text_Editor now supports basic undo functionality.
	- FLUID now uses Fl_Text_Editor widgets for all
	  multi-line code fields.
	- Added new widget bin and icons to FLUID.
	- FLUID would try running multiple commands in parallel,
	  even though it wasn't capable of handling it.
	- FLUID didn't generate code for some attributes when
	  using custom/named widget classes.
	- Added a new FL_COMMAND state bit which maps to FL_CTRL
	  on X11 and WIN32 and FL_META on MacOS.
	- MacOS keyboard modifiers mapping corrections. Cmd and
	  Control are no longer swapped, event_key and event_text
	  return (mostly) the same values as on other platforms.
	- The Fl_Tabs widget should no longer be a focus hog;
	  previously it would take focus from child widgets.
	- The file chooser now activates the OK button when
	  opening a directory in directory selection mode.
	- Fixed a bug in the file chooser when entering an
	  absolute path.
	- Back-ported some FLTK 2.0 tooltip changes to eliminate
	  erroneous tooltip display.